--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,16 @@
 <header class="header">
-  <div class="container"></div>
+  <div class="header__container container">
+    <nav class="header__nav nav" title="Основное меню">
+      <ul class="nav__list list-reset">
+        <li class="nav__item"><a href="#" class="nav__link">Для кого</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Формат</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Программа</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Тарифы</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">О спикере</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Вопросы</a></li>
+      </ul>
+    </nav>
+    <button class="header__btn btn btn--stroke btn--stroke-full btn-reset" aria-label="Оставить заявку">Оставить
+      заявку</button>
+  </div>
 </header>
