--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,6 @@
-// @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+@include font-face("Gilroy", "../fonts/GilroyLight", 300, normal);
+@include font-face("Gilroy", "../fonts/GilroyRegular", 400, normal);
+@include font-face("Gilroy", "../fonts/GilroyMedium", 500, normal);
+@include font-face("Gilroy", "../fonts/GilroySemiBold", 600, normal);
+@include font-face("Gilroy", "../fonts/GilroyBold", 700, normal);
+@include font-face("DelaGothicOne", "../fonts/DelaGothicOneRegular", 400, normal);
