--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,15 +6,15 @@
       <p class="hero__text">Помогаю выйти на оборот от <span class="hero__price">1 000 000 ₽</span> в месяц</p>
       <ul class="hero__list list-reset">
         <li class="hero__item">
-          <span class="hero__subtitle">Старт</span>
+          <h2 class="hero__subtitle">Старт</h2>
           <span class="hero__descr">15 апреля</span>
         </li>
         <li class="hero__item">
-          <span class="hero__subtitle">Длительность</span>
+          <h2 class="hero__subtitle">Длительность</h2>
           <span class="hero__descr">2 месяца</span>
         </li>
         <li class="hero__item">
-          <span class="hero__subtitle">Формат</span>
+          <h2 class="hero__subtitle">Формат</h2>
           <span class="hero__descr">Онлайн</span>
         </li>
         <li class="hero__item hero__item--circle">
@@ -23,7 +23,8 @@
       </ul>
       <div class="hero__btns">
         <button class="hero__btn btn btn-reset" aria-label="Принять участие">Принять участие</button>
-        <button class="hero__btn btn btn--stroke btn--stroke-full btn-reset" aria-label="Программа">Программа</button>
+        <button class="hero__btn btn btn--stroke btn--stroke-full btn-reset"
+          aria-label="Наша программа">Программа</button>
       </div>
     </div>
     <div class="hero__author">
