--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
   padding: 16px 0;
-  background-color: var(--accent-color);
+  background-color: var(--violet-color);
 
   &__container {
     @include flex-all-sb;
