--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,4 @@
 // подключения основных компонентов  страницы
 @import "./components/header";
 @import "./components/hero";
+@import "./components/mentorship";
