--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,4 +1,3 @@
-// если вы хотите использовать sass-переменные - удалите root
 // colors
 :root {
   // base
@@ -16,10 +15,12 @@
 
   // colors
   --light-color: #ffffff;
-  --accent-color: #21093a;
+  --selago-color: #f4f2fd;
+  --accent-color: #e1016e;
   --disco-color: #961975;
-  --razzmatazz-color: #e1016e;
+  --violet-color: #21093a;
   --loulou-color: #5f0b57;
+  --meteorite-color: #4c217a;
 
   //gradient
   --main-gradient: linear-gradient(to left, #e5006d, #4c217a, #dc046d);
