--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -25,7 +25,7 @@
       width: 100%;
       height: 1px;
       border-radius: 2px;
-      background-color: var(--razzmatazz-color);
+      background-color: var(--accent-color);
       opacity: 0;
       transform-origin: left center;
       transition: opacity 0.3s ease, transform 0.3s ease;
@@ -38,16 +38,15 @@
 
     @include hover {
       &::after {
-        @include kf-scale;
+        @include kf-scaleX;
 
         opacity: 1;
-        animation: kf-scale 0.3s linear forwards;
-        transform: scaleX(1);
+        animation: kf-scaleX 0.3s linear forwards;
       }
     }
 
     &:active {
-      color: var(--razzmatazz-color);
+      color: var(--accent-color);
     }
   }
 }
