--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,4 @@
 @import "./components/header";
 @import "./components/hero";
 @import "./components/mentorship";
+@import "./components/training";
