--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -21,6 +21,8 @@
   --violet-color: #21093a;
   --loulou-color: #5f0b57;
   --meteorite-color: #4c217a;
+  --electric-color: #8900c9;
+  --purple-color: #a58fbc;
 
   //gradient
   --main-gradient: linear-gradient(to left, #e5006d, #4c217a, #dc046d);
