--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,9 +7,11 @@
 // подключения блок компонентов страницы
 @import "./components/nav";
 @import "./components/btn";
+@import "./components/accordion";
 
 // подключения основных компонентов  страницы
 @import "./components/header";
 @import "./components/hero";
 @import "./components/mentorship";
 @import "./components/training";
+@import "./components/program";
