--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./components/nav";
 @import "./components/btn";
 @import "./components/accordion";
+@import "./components/apply";
 
 // подключения основных компонентов  страницы
 @import "./components/header";
