--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -47,13 +47,10 @@
     }
 
     &-light {
-      background-image: var(--stroke-gradient-light);
+      max-width: 188px;
+      background-image: none;
       color: var(--violet-color);
-      transition: color 0.3s ease;
-
-      @include hover {
-        color: var(--light-color);
-      }
+      border: 1px solid var(--disco-color);
     }
 
     @include hover {
