--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,3 +16,4 @@
 @import "./components/mentorship";
 @import "./components/training";
 @import "./components/program";
+@import "./components/tariffs";
