--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -155,7 +155,8 @@
         <label class="apply__label">
           <input class="apply__input input-reset" type="tel" name="phone" placeholder="Телефон">
         </label>
-        <button class="apply__btn btn btn-reset" type="submit">Оставить заявку на диагностику</button>
+        <button class="apply__btn btn btn-reset" type="submit" aria-label="Оставить заявку на диагностику">Оставить
+          заявку на диагностику</button>
         <p class="apply__policy">Нажимая на кнопку, вы соглашаетесь с <a class="apply__link" href="#">политикой
             конфиденциальности</a> и даете согласие на
           обработку персональных данных.</p>
