--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "./components/btn";
 @import "./components/accordion";
 @import "./components/apply";
+@import "./components/results-stat";
 
 // подключения основных компонентов  страницы
 @import "./components/header";
@@ -17,3 +18,4 @@
 @import "./components/training";
 @import "./components/program";
 @import "./components/tariffs";
+@import "./components/speaker";
