--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -1,5 +1,6 @@
 @import "./vendor/normalize";
 @import "./vendor/accordion";
+@import "../../node_modules/swiper/swiper-bundle.min";
 
 // стили для модального окна
 // @import "../../node_modules/graph-modal/dist/graph-modal.min"
