--- a/src/partials/mentorship.html
+++ b/src/partials/mentorship.html
@@ -1,4 +1,4 @@
-<section class="mentorship section-offset">
+<section class="mentorship section-offset" id="mentorship">
   <div class="container">
     <h2 class="mentorship__title title">Кому подойдёт наставничество</h2>
     <ul class="mentorship__list list-reset grid">
