--- a/src/partials/speaker.html
+++ b/src/partials/speaker.html
@@ -1,4 +1,4 @@
-<section class="speaker section-offset">
+<section class="speaker section-offset" id="speaker">
   <div class="container">
     <div class="speaker__info">
       <div class="speaker__content">
@@ -15,7 +15,7 @@
         <source media="(max-width: 575px)" srcset="img/speaker-image.webp" type="image/webp">
         <source srcset="img/speaker-image.webp" type="image/webp">
         <img loading="lazy" src="img/speaker-image.png" srcset="speaker-image__2x.png 2x" class="speaker__image"
-          width="507" height="620" alt="Наставник - Сергей поталинский">
+          width="547" height="620" alt="Наставник - Сергей поталинский">
       </picture>
     </div>
     <div class="results-stat">
@@ -33,31 +33,37 @@
       <div class="results-stat__slider swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <picture>
-              <source media="(min-width: 576px)" srcset="img/result-1_2x.webp 2x" type="image/webp">
-              <source media="(max-width: 575px)" srcset="img/result-1.webp" type="image/webp">
-              <source srcset="img/result-1.webp" type="image/webp">
-              <img loading="lazy" src="img/result-1.jpg" srcset="img/result-1__2x.jpg 2x" class="results-stat__image"
-                width="960" height="543" alt="Статистика продаж на Wildberries">
-            </picture>
+            <a class="results-stat__link" data-fslightbox="gallery" href="img/result-1_2x.jpg" aria-hidden="true">
+              <picture>
+                <source media="(min-width: 576px)" srcset="img/result-1_2x.webp 2x" type="image/webp">
+                <source media="(max-width: 575px)" srcset="img/result-1.webp" type="image/webp">
+                <source srcset="img/result-1.webp" type="image/webp">
+                <img loading="lazy" src="img/result-1.jpg" srcset="img/result-1_2x.jpg 2x" class="results-stat__image"
+                  width="960" height="543" alt="Статистика продаж на Wildberries">
+              </picture>
+            </a>
           </div>
           <div class="swiper-slide">
-            <picture>
-              <source media="(min-width: 576px)" srcset="img/result-1_2x.webp 2x" type="image/webp">
-              <source media="(max-width: 575px)" srcset="img/result-1.webp" type="image/webp">
-              <source srcset="img/result-1.webp" type="image/webp">
-              <img loading="lazy" src="img/result-1.jpg" srcset="img/result-1__2x.jpg 2x" class="results-stat__image"
-                width="960" height="543" alt="Статистика продаж на Wildberries">
-            </picture>
+            <a class="results-stat__link" data-fslightbox="gallery" href="img/result-1_2x.jpg" aria-hidden="true">
+              <picture>
+                <source media="(min-width: 576px)" srcset="img/result-1_2x.webp 2x" type="image/webp">
+                <source media="(max-width: 575px)" srcset="img/result-1.webp" type="image/webp">
+                <source srcset="img/result-1.webp" type="image/webp">
+                <img loading="lazy" src="img/result-1.jpg" srcset="img/result-1_2x.jpg 2x" class="results-stat__image"
+                  width="960" height="543" alt="Статистика продаж на Wildberries">
+              </picture>
+            </a>
           </div>
           <div class="swiper-slide">
-            <picture>
-              <source media="(min-width: 576px)" srcset="img/result-1_2x.webp 2x" type="image/webp">
-              <source media="(max-width: 575px)" srcset="img/result-1.webp" type="image/webp">
-              <source srcset="img/result-1.webp" type="image/webp">
-              <img loading="lazy" src="img/result-1.jpg" srcset="img/result-1__2x.jpg 2x" class="results-stat__image"
-                width="960" height="543" alt="Статистика продаж на Wildberries">
-            </picture>
+            <a class="results-stat__link" data-fslightbox="gallery" href="img/result-1_2x.jpg" aria-hidden="true">
+              <picture>
+                <source media="(min-width: 576px)" srcset="img/result-1_2x.webp 2x" type="image/webp">
+                <source media="(max-width: 575px)" srcset="img/result-1.webp" type="image/webp">
+                <source srcset="img/result-1.webp" type="image/webp">
+                <img loading="lazy" src="img/result-1.jpg" srcset="img/result-1_2x.jpg 2x" class="results-stat__image"
+                  width="960" height="543" alt="Статистика продаж на Wildberries">
+              </picture>
+            </a>
           </div>
         </div>
       </div>
@@ -68,7 +74,7 @@
               <source media="(min-width: 576px)" srcset="img/result-nav-1_2x.webp 2x" type="image/webp">
               <source media="(max-width: 575px)" srcset="img/result-nav-1.webp" type="image/webp">
               <source srcset="img/result-nav-1.webp" type="image/webp">
-              <img loading="lazy" src="img/result-nav-1.jpg" srcset="img/result-nav-1__2x.jpg 2x"
+              <img loading="lazy" src="img/result-nav-1.jpg" srcset="img/result-nav-1_2x.jpg 2x"
                 class="results-stat__nav-image" width="48" height="48" alt="Статистика продаж на Wildberries">
             </picture>
           </div>
@@ -77,7 +83,7 @@
               <source media="(min-width: 576px)" srcset="img/result-nav-1_2x.webp 2x" type="image/webp">
               <source media="(max-width: 575px)" srcset="img/result-nav-1.webp" type="image/webp">
               <source srcset="img/result-nav-1.webp" type="image/webp">
-              <img loading="lazy" src="img/result-nav-1.jpg" srcset="img/result-nav-1__2x.jpg 2x"
+              <img loading="lazy" src="img/result-nav-1.jpg" srcset="img/result-nav-1_2x.jpg 2x"
                 class="results-stat__nav-image" width="48" height="48" alt="Статистика продаж на Wildberries">
             </picture>
           </div>
@@ -86,7 +92,7 @@
               <source media="(min-width: 576px)" srcset="img/result-nav-1_2x.webp 2x" type="image/webp">
               <source media="(max-width: 575px)" srcset="img/result-nav-1.webp" type="image/webp">
               <source srcset="img/result-nav-1.webp" type="image/webp">
-              <img loading="lazy" src="img/result-nav-1.jpg" srcset="img/result-nav-1__2x.jpg 2x"
+              <img loading="lazy" src="img/result-nav-1.jpg" srcset="img/result-nav-1_2x.jpg 2x"
                 class="results-stat__nav-image" width="48" height="48" alt="Статистика продаж на Wildberries">
             </picture>
           </div>
