--- a/src/partials/tariffs.html
+++ b/src/partials/tariffs.html
@@ -1,4 +1,4 @@
-<section class="tariffs section-offset">
+<section class="tariffs section-offset" id="tariffs">
   <div class="container">
     <h2 class="tariffs__title title">Тарифы</h2>
     <ul class="tariffs__list list-reset grid">
