--- a/src/partials/training.html
+++ b/src/partials/training.html
@@ -1,4 +1,4 @@
-<section class="training">
+<section class="training" id="training">
   <div class="training__container container-fluid">
     <h2 class="training__title title">как проходит обучение</h2>
     <ul class="training__list list-reset grid">
