--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,3 +19,4 @@
 @import "./components/program";
 @import "./components/tariffs";
 @import "./components/speaker";
+@import "./components/answers";
