--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,4 +1,4 @@
-<section class="program section-offset">
+<section class="program section-offset" id="program">
   <div class="container">
     <h2 class="program__title title">Программа курса</h2>
     <div class="program__accordions">
