--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,24 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+    <ul class="footer__list list-reset">
+      <li class="footer__item">
+        <h2 class="footer__title">Сергей Поталинский</h2>
+        <span class="footer__position">наставник по маркетплейсам</span>
+      </li>
+      <li class="footer__item">
+        <h3 class="footer__title">Реквизиты</h3>
+        <ul class="footer__sublist list-reset">
+          <li class="footer__subitem">ИП Поталинский С.Н.</li>
+          <li class="footer__subitem">ИНН 780632121730</li>
+          <li class="footer__subitem">ОГРН 321784700015882</li>
+        </ul>
+      </li>
+      <li class="footer__item">
+        <div class="footer__copy">
+          <span class="footer__offer">Публичная оферта</span>
+          <span class="footer__policy">Политика конфиденциальности</span>
+        </div>
+      </li>
+    </ul>
+  </div>
 </footer>
