--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
         <li class="nav__item"><a href="#program" data-scroll data-menu-item class="nav__link">Программа</a></li>
         <li class="nav__item"><a href="#tariffs" data-scroll data-menu-item class="nav__link">Тарифы</a></li>
         <li class="nav__item"><a href="#speaker" data-scroll data-menu-item class="nav__link">О спикере</a></li>
-        <li class="nav__item"><a href="#" data-scroll data-menu-item class="nav__link">Вопросы</a></li>
+        <li class="nav__item"><a href="#answers" data-scroll data-menu-item class="nav__link">Вопросы</a></li>
       </ul>
     </nav>
     <button class="header__btn btn btn--stroke btn--stroke-full btn-reset" aria-label="Оставить заявку">Оставить
