--- a/src/partials/answers.html
+++ b/src/partials/answers.html
@@ -1,68 +1,101 @@
-<section class="answers section-offset">
+<section class="answers section-offset" id="answers">
   <div class="container">
     <h2 class="answers__title title">Ответы на вопросы</h2>
-    <div class="answers__accordion accordion accordion-answers--1 is-open">
-      <button class="accordion__control btn-reset">
-        <span class="accordion__title">Нужен ли бюджет?</span>
-        <span class="accordion__icon"></span>
-      </button>
-      <div class="accordion__content">
-        <p class="accordion__descr">Я проведу с вами личную диагностику, где оценю ваши текущие результаты.
-          Мы разработаем индивидуальную стратегию.
-          У кого-то из вас могут быть уже налажены поставки товаров на все склады и вам нужно, например, продвижение
-          товаров и проработка карточек. Кому-то, например, нужен будет поиск товаров и аналитика и только потом этап
-          закупки товаров и поставка.
-          Бюджет у каждого индивидуален — обязательного минимального критерия нет.
-          Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
+    <div class="answers__accordions">
+      <div class="accordion accordion-answers--1 is-open">
+        <button class="accordion__control btn-reset">
+          <span class="accordion__title">Нужен ли бюджет?</span>
+          <span class="accordion__icon"></span>
+        </button>
+        <div class="accordion__content">
+          <p class="accordion__descr">Я проведу с вами личную диагностику, где оценю ваши текущие результаты.
+            Мы разработаем индивидуальную стратегию.
+            У кого-то из вас могут быть уже налажены поставки товаров на все склады и вам нужно, например, продвижение
+            товаров и проработка карточек. Кому-то, например, нужен будет поиск товаров и аналитика и только потом этап
+            закупки товаров и поставка.
+            Бюджет у каждого индивидуален — обязательного минимального критерия нет.
+            Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
+        </div>
+      </div>
+      <div class="accordion accordion-answers--2">
+        <button class="accordion__control btn-reset">
+          <span class="accordion__title">Смогу ли я найти новые товары для продажи?</span>
+          <span class="accordion__icon"></span>
+        </button>
+        <div class="accordion__content">
+          <p class="accordion__descr">Я проведу с вами личную диагностику, где оценю ваши текущие результаты.
+            Мы разработаем индивидуальную стратегию.
+            У кого-то из вас могут быть уже налажены поставки товаров на все склады и вам нужно, например, продвижение
+            товаров и проработка карточек. Кому-то, например, нужен будет поиск товаров и аналитика и только потом
+            этап
+            закупки товаров и поставка.
+            Бюджет у каждого индивидуален — обязательного минимального критерия нет.
+            Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
+        </div>
+      </div>
+      <div class="accordion accordion-answers--3">
+        <button class="accordion__control btn-reset">
+          <span class="accordion__title">Как понять, будет ли полезно это наставничество лично мне?</span>
+          <span class="accordion__icon"></span>
+        </button>
+        <div class="accordion__content">
+          <p class="accordion__descr">Я проведу с вами личную диагностику, где оценю ваши текущие результаты.
+            Мы разработаем индивидуальную стратегию.
+            У кого-то из вас могут быть уже налажены поставки товаров на все склады и вам нужно, например, продвижение
+            товаров и проработка карточек. Кому-то, например, нужен будет поиск товаров и аналитика и только потом
+            этап
+            закупки товаров и поставка.
+            Бюджет у каждого индивидуален — обязательного минимального критерия нет.
+            Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
+        </div>
+      </div>
+      <div class="accordion accordion-answers--4">
+        <button class="accordion__control btn-reset">
+          <span class="accordion__title">Почему это называется наставничество, а не курс?</span>
+          <span class="accordion__icon"></span>
+        </button>
+        <div class="accordion__content">
+          <p class="accordion__descr">Я проведу с вами личную диагностику, где оценю ваши текущие результаты.
+            Мы разработаем индивидуальную стратегию.
+            У кого-то из вас могут быть уже налажены поставки товаров на все склады и вам нужно, например, продвижение
+            товаров и проработка карточек. Кому-то, например, нужен будет поиск товаров и аналитика и только потом
+            этап
+            закупки товаров и поставка.
+            Бюджет у каждого индивидуален — обязательного минимального критерия нет.
+            Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
+        </div>
       </div>
     </div>
-    <div class="answers__accordion accordion accordion-answers--2">
-      <button class="accordion__control btn-reset">
-        <span class="accordion__title">Смогу ли я найти новые товары для продажи?</span>
-        <span class="accordion__icon"></span>
-      </button>
-      <div class="accordion__content">
-        <p class="accordion__descr">Я проведу с вами личную диагностику, где оценю ваши текущие результаты.
-          Мы разработаем индивидуальную стратегию.
-          У кого-то из вас могут быть уже налажены поставки товаров на все склады и вам нужно, например, продвижение
-          товаров и проработка карточек. Кому-то, например, нужен будет поиск товаров и аналитика и только потом
-          этап
-          закупки товаров и поставка.
-          Бюджет у каждого индивидуален — обязательного минимального критерия нет.
-          Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
+    <div class="answers__apply apply">
+      <div class="apply__content">
+        <h3 class="apply__title">Заявка на диагностику</h3>
+        <p class="apply__descr">На диагностике мы обсудим вашу ситуацию и бизнес и вы поймете, подходит ли вам это
+          наставничество и сколько это стоит</p>
       </div>
-    </div>
-    <div class="answers__accordion accordion accordion-answers--3">
-      <button class="accordion__control btn-reset">
-        <span class="accordion__title">Как понять, будет ли полезно это наставничество лично мне?</span>
-        <span class="accordion__icon"></span>
-      </button>
-      <div class="accordion__content">
-        <p class="accordion__descr">Я проведу с вами личную диагностику, где оценю ваши текущие результаты.
-          Мы разработаем индивидуальную стратегию.
-          У кого-то из вас могут быть уже налажены поставки товаров на все склады и вам нужно, например, продвижение
-          товаров и проработка карточек. Кому-то, например, нужен будет поиск товаров и аналитика и только потом
-          этап
-          закупки товаров и поставка.
-          Бюджет у каждого индивидуален — обязательного минимального критерия нет.
-          Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
-      </div>
-    </div>
-    <div class="answers__accordion accordion accordion-answers--4">
-      <button class="accordion__control btn-reset">
-        <span class="accordion__title">Почему это называется наставничество, а не курс?</span>
-        <span class="accordion__icon"></span>
-      </button>
-      <div class="accordion__content">
-        <p class="accordion__descr">Я проведу с вами личную диагностику, где оценю ваши текущие результаты.
-          Мы разработаем индивидуальную стратегию.
-          У кого-то из вас могут быть уже налажены поставки товаров на все склады и вам нужно, например, продвижение
-          товаров и проработка карточек. Кому-то, например, нужен будет поиск товаров и аналитика и только потом
-          этап
-          закупки товаров и поставка.
-          Бюджет у каждого индивидуален — обязательного минимального критерия нет.
-          Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
-      </div>
+      <form class="apply__form">
+        <label class="apply__label">
+          <input class="apply__input input-reset" type="text" name="name" placeholder="Имя">
+        </label>
+        <label class="apply__label">
+          <input class="apply__input input-reset" type="tel" name="phone" placeholder="Телефон">
+        </label>
+        <label class="apply__label">
+          <select class="apply__select" name="Удобный способ связи">
+            <option value="">Удобный способ связи</option>
+            <option value="Telegram">Telegram</option>
+            <option value="WhatsApp">WhatsApp</option>
+          </select>
+        </label>
+        <label class="apply__label">
+          <input class="apply__input input-reset" type="text" name="text" placeholder="Ваш магазин на WB">
+          <p class="apply__info">Укажите ИП, название или ссылку (если нет — оставьте поле пустым)</p>
+        </label>
+        <button class="apply__btn btn btn-reset" type="submit" aria-label="Оставить заявку на диагностику">Оставить
+          заявку на диагностику</button>
+        <p class="apply__policy">Нажимая на кнопку, вы соглашаетесь с <a class="apply__link" href="#">политикой
+            конфиденциальности</a> и даете согласие на
+          обработку персональных данных.</p>
+      </form>
     </div>
   </div>
 </section>
