--- a/src/scss/components/_answers.scss
+++ b/src/scss/components/_answers.scss
@@ -3,6 +3,10 @@
     margin-bottom: 10px;
   }
 
+  &__accordions {
+    margin-bottom: 100px;
+  }
+
   .accordion__title {
     font-weight: 400;
     font-size: 24px;
@@ -69,5 +73,9 @@
     &::after {
       opacity: 0;
     }
+  }
+
+  &__apply {
+    max-width: 100%;
   }
 }
